<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimary"
    android:clickable="true"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardCornerRadius="8dp">

    <!--android:paddingEnd="8dp"-->
    <!--android:paddingLeft="8dp"-->
    <!--android:paddingRight="8dp"-->
    <!--android:paddingStart="8dp"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mac"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deviceMAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/MAC"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deviceIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:paddingStart="60dp"
                android:text="@string/ipAddress"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/userName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:paddingEnd="4dp"
                android:paddingRight="4dp"
                android:text="@string/name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="14dp"
                android:maxLines="1"
                android:maxLength="3"
                android:inputType="text"
                android:background="@null"
                android:layout_marginRight="14dp"
                android:text="@string/username"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>


</android.support.v7.widget.CardView>
